[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["mokamoto-ri <mokamoto@ridge-i.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pyproject-flake8 = "^6.0.0"
isort = "^5.11.3"
black = "^22.12.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
autoflake = "^2.0.0"
pyproject-autoflake = "^1.0.2"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3

[tool.flake8]
max-line-length = 127

[tool.black]
target-version = ['py310']
line-length = 127

[tool.mypy]
ignore_missing_imports = "True"

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

